# burgerspace

./: Dockerfile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  burgerspace-core.vcproj  burgerspace-server.vcproj  burgerspace.sln  burgerspace.spec  burgerspace.spec.in  burgerspace.vcproj  configure  configure.ac  makedocker.sh  run  start.sh  startdocker.sh
dispenser/: config.py  dispense.py  main.py  requirements.txt  test.py
doc/: burgerspace-server.6  burgerspace-server.6.in  burgerspace.6  burgerspace.6.in
src/: BurgerSpaceClient.cpp  BurgerSpaceClient.h  BurgerSpaceServer.cpp  BurgerSpaceServer.h  Controller.h  EnemySprite.cpp  EnemySprite.h  IngredientGroup.cpp  IngredientGroup.h  IngredientSprite.h  LocalServer.cpp  LocalServer.h  Makefile.am  Makefile.in  RemoteServer.cpp  RemoteServer.h  burgerspace.desktop  burgerspace.desktop.in  client.cpp  distribute-win32.bat  install-win32.bat  server.cpp  util.h
src/images/: bottom-bun0.xpm  bottom-bun1.xpm  bottom-bun2.xpm  bottom-bun3.xpm  conv.sh  conv2.sh  conv3.sh  lettuce0.xpm  lettuce1.xpm  lettuce2.xpm  lettuce3.xpm  meat0.xpm  meat1.xpm  meat2.xpm  meat3.xpm  redstuff.xpm  top-bun0.xpm  top-bun1.xpm  top-bun2.xpm  top-bun3.xpm
